Added submodule for robot libarary

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/external_dependencies/tau"]
 	path = src/external_dependencies/tau
 	url = https://github.com/vosel/tau
+[submodule "src/external_dependencies/robot"]
+	path = src/external_dependencies/robot
+	url = https://github.com/Robot/robot
