--- a/src/hat/hat.vcxproj
+++ b/src/hat/hat.vcxproj
@@ -18,6 +18,13 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="engine.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="engine.hpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{37B2374D-B1B2-44EF-B670-BABDF5205124}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
