--- a/src/hat-core/hat-core.vcxproj.filters
+++ b/src/hat-core/hat-core.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClCompile Include="utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="variables_manager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="abstract_engine.hpp">
@@ -49,6 +52,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="utils.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="variables_manager.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
