Added unit tests for the VariablesManager logic

--- a/src/hat-tests/hat-tests.vcxproj.filters
+++ b/src/hat-tests/hat-tests.vcxproj.filters
@@ -28,12 +28,21 @@
     <ClCompile Include="commands_parsing_testing_utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="variables_manager_testing_utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VariablesManagerTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="layout_parsing_verificator.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="commands_parsing_testing_utils.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="variables_manager_testing_utils.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
