--- a/src/hat-tests/hat-tests.vcxproj
+++ b/src/hat-tests/hat-tests.vcxproj
@@ -26,10 +26,13 @@
     <ClCompile Include="LayoutConfiguraionParsingTest.cpp" />
     <ClCompile Include="layout_parsing_verificator.cpp" />
     <ClCompile Include="MainTest.cpp" />
+    <ClCompile Include="VariablesManagerTest.cpp" />
+    <ClCompile Include="variables_manager_testing_utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="commands_parsing_testing_utils.hpp" />
     <ClInclude Include="layout_parsing_verificator.hpp" />
+    <ClInclude Include="variables_manager_testing_utils.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CF87D95B-402A-4A73-8002-F7A5BA486DDD}</ProjectGuid>
