[~] extracted the code to base for future reuse
Utilized the crtp pattern for implementing the string wrapper class, so
that we don't get code duplication in the future (when more string
wrapper classes are introduced)

--- a/src/hat-core/hat-core.vcxproj.filters
+++ b/src/hat-core/hat-core.vcxproj.filters
@@ -10,9 +10,6 @@
     <ClCompile Include="abstract_engine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="command_id.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="commands_data_extraction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -55,6 +52,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="variables_manager.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="string_id.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
