--- a/src/hat-core/hat-core.vcxproj
+++ b/src/hat-core/hat-core.vcxproj
@@ -21,7 +21,6 @@
   <ItemGroup>
     <ClCompile Include="abstract_engine.cpp" />
     <ClCompile Include="commands_data_extraction.cpp" />
-    <ClCompile Include="command_id.cpp" />
     <ClCompile Include="configs_abstraction_layer.cpp" />
     <ClCompile Include="preprocessed_layout.cpp" />
     <ClCompile Include="variables_manager.cpp" />
@@ -34,6 +33,7 @@
     <ClInclude Include="command_id.hpp" />
     <ClInclude Include="configs_abstraction_layer.hpp" />
     <ClInclude Include="preprocessed_layout.hpp" />
+    <ClInclude Include="string_id.hpp" />
     <ClInclude Include="variables_manager.hpp" />
     <ClInclude Include="user_defined_layout.hpp" />
     <ClInclude Include="utils.hpp" />
