[+] added unit tests for button images configs loading code

--- a/src/hat-tests/hat-tests.vcxproj
+++ b/src/hat-tests/hat-tests.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="commands_parsing_testing_utils.cpp" />
     <ClCompile Include="ConfigsAbstractionLayerTest.cpp" />
     <ClCompile Include="HotkeysCSV_parsingTest.cpp" />
+    <ClCompile Include="ImageResourcesConfigParsingTest.cpp" />
     <ClCompile Include="LayoutConfiguraionParsingTest.cpp" />
     <ClCompile Include="layout_parsing_verificator.cpp" />
     <ClCompile Include="MainTest.cpp" />
