--- a/src/hat-tests/hat-tests.vcxproj.filters
+++ b/src/hat-tests/hat-tests.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="VariablesManagersConfigParsingTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ImageResourcesConfigParsingTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="layout_parsing_verificator.hpp">
